# ampapi-rs

./: .gitignore  README.md
ampapi/: Cargo.toml
ampapi/src/: lib.rs  main.rs  types.rs
ampapi/src/modules/: ads_module.rs  core.rs  email_sender_plugin.rs  file_manager_plugin.rs  generic_module.rs  local_file_backup_plugin.rs  minecraft_module.rs  mod.rs  rcon_plugin.rs  steamcmd_plugin.rs
utils/: ampapi_gen.py
utils/templates/: api_module.txt  api_module_method.txt  api_module_method_parameter_doc.txt  api_module_method_parameter_map.txt
