[package]
name = "ampapi"
version = "0.1.5"
edition = "2021"
license = "GPL-3.0"
description = "An API that allows you to communicate with AMP installations from within Rust"
homepage = "https://github.com/p0t4t0sandwich/ampapi-rust#readme"
repository = "https://github.com/p0t4t0sandwich/ampapi-rust"
readme = "../README.md"
keywords = ["amp", "api", "rust"]
categories = ["api-clients"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
